--- a/hotel_app/templates/hotel_details.html
+++ b/hotel_app/templates/hotel_details.html
@@ -72,13 +72,13 @@
     <h3>Fill This booking form</h3>
 
     <label for="customer_fname">Firstname</label>
-    <input type="text" id="customer_fname" name="customer_fname" placeholder="Enter your firstname" >
+    <input type="text" required id="customer_fname" name="customer_fname" placeholder="Enter your firstname" >
     <label for="customer_lname">Lastname</label>
     <input type="text" id="customer_lname" name="customer_lname" placeholder="Enter your lastname" >
     <label for="customer_email">E-mail</label>
-    <input type="text" id="customer_email" name="customer_email" placeholder="Enter your email" >
+    <input type="text" required id="customer_email" name="customer_email" placeholder="Enter your email" >
     <label for="customer_email">Enter payment</label>
-    <input type="number" id="payment" name="payment" placeholder="Enter payment" >
+    <input type="number" id="payment" name="payment" required placeholder="Enter payment" >
     <label for="start_date">Start Date</label>
     <input type="date" id="start_date" name="start_date" required>
     <label for="end_date">End Date</label>
