--- a/hotel_app/templates/contact.html
+++ b/hotel_app/templates/contact.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block head %}
+{% block title %}Contact{% endblock title %}
+{% endblock head %}
 
 {% block body %}
 <div class="login-wrapper">
