--- a/hotel_app/templates/hotel_details.html
+++ b/hotel_app/templates/hotel_details.html
@@ -43,6 +43,7 @@
     margin-bottom:10px;
   }
 </style>
+{% block title %}{{ hotel.hotel_name }}{% endblock title %}
 {% endblock head %}
 {% block body %}
 <h1>{{ hotel.hotel_name }} – Hotel Details</h1>
