--- a/accounts/templates/register_page.html
+++ b/accounts/templates/register_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}Register{% endblock %}
 {% block body %}
 <div class="login-wrapper " style="background-color: antiquewhite;">
     <form class="login-form" method="POST">
