--- a/accounts/templates/login_page.html
+++ b/accounts/templates/login_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Login{% endblock %}
 {% block body %}
 <div class="login-wrapper">
     <form class="login-form" method="POST">
