--- a/hotel_app/templates/contact.html
+++ b/hotel_app/templates/contact.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
-{% block head %}
-{% block title %}Contact{% endblock title %}
-{% endblock head %}
-
+{% block title %}Contact{% endblock %}
 {% block body %}
 <div class="login-wrapper">
     <form class="login-form" method="POST">
