--- a/hotel_app/templates/base.html
+++ b/hotel_app/templates/base.html
@@ -42,7 +42,7 @@
 
     <div class="footer-section contact">
       <h2>Contact</h2>
-      <p>Email: nitinparjapat94.com</p>
+      <p>Email: nitinparjapat94@gmail.com</p>
       <p>Phone: +91 8221985564</p>
       <p>Location: Panipat, Haryana, India</p>
     </div>
